# epitech-projects

./: .gitignore  .gitmodules  README.md
CPE/: README.md
CPE/BSQ/src/: my_futils.c
CPE/matchstick/: .gitignore  main.c
CPE/minishell1/: main.c
CPE/minishell2/: .gitignore
CPool/day01/: mr_clean  push_that.sh
CPool/day02/: gotta_catch_them_all.sh  looneytised.sh  r_tacpy.sh  skip.sh
CPool/day03/: my_print_alpha.c  my_print_comb.c  my_print_combn.c  my_put_nbr.c
CPool/day04/: my_evil_str.c  my_sort_int_array.c
CPool/day05/: my_compute_factorial_it.c  my_compute_power_it.c
CPool/day06/: my_str_islower.c  my_str_isprintable.c  my_str_isupper.c  my_strupcase.c
CPool/day07/: my_strcat.c  my_strncat.c
CPool/day08/: my_show_word_array.c
CPool/day11/: my_list_size.c  my_params_to_list.c  my_rev_list.c
FUN/Wolfram/: package.yaml
Haskell-Pool/: README.md
Haskell-Pool/day02/: DoOp.hs
Haskell-Pool/day03/: Game.hs
MAT/: README.md
MAT/101pong/: 101pong
MAT/104intersection/: 104intersection
MAT/105torus/: 105torus
MAT/107transfert/: 107transfer
MAT/108trigo/: 108trigo  advanced_matrix.py
MAT/202unsold/: 202unsold
MUL/: README.md
MUL/mydefender/: .gitignore  Makefile  main.c
MUL/myrpg/: .gitignore  Makefile  main.c  readme.md
MUL/myrunner/: Makefile
Nmatch/: Makefile  match.c
OOP/: README.md
OOP/NanoTekSpice/: .gitignore  CMakeLists.txt  TekSpice.cpp  Tekspice.hpp
OOP/NanoTekSpice/src/: Compute.cpp  Compute.hpp
OOP/NanoTekSpice/src/components/: AComponent.cpp  AComponent.hpp  Factory.cpp  Factory.hpp  FlipFlop.cpp  FlipFlop.hpp  Gate.cpp  Gate.hpp  IComponent.hpp
OOP/NanoTekSpice/src/components/chipsets/: C4001.cpp  C4001.hpp  C4008.cpp  C4008.hpp  C4011.cpp  C4011.hpp  C4013.cpp  C4013.hpp  C4017.cpp  C4017.hpp  C4030.cpp  C4030.hpp  C4040.cpp  C4040.hpp  C4069.cpp  C4069.hpp  C4071.cpp  C4071.hpp  C4081.cpp  C4081.hpp  CClock.cpp  CClock.hpp  CFalse.cpp  CFalse.hpp  CInput.cpp  CInput.hpp  COutput.cpp  COutput.hpp  CTrue.cpp  CTrue.hpp
OOP/NanoTekSpice/src/parser/: Parser.cpp  Parser.hpp
OOP/NanoTekSpice/src/utils/: RegUtils.cpp  RegUtils.hpp
PSU/: README.md
PSU/myls/: Makefile
PSU/myprintf/: Makefile  README.md
PSU/navy/: .gitignore
tek1/FUN/: README.md
tek1/FirTree/: main.c  tree.c
tek1/MAT/: README.md
tek1/Nmatch/: nmatch.c
tek2/: README.md
tek2/B-FUN-400-rush1/: Makefile  pushswap_checker.hs
tek3/: README.md
tek3/B-DEV-500-area/: .gitignore  README.md  docker-compose-dev.yml  docker-compose-no-apk.yml  docker-compose.yml
(+691 files in other folders)
